# Fast-ML-FE2

./: .gitignore  .mcp.json  AGENTS.md  FFICliSmoke.lean  FFILeanSmoke.lean  FastMLFE2.lean  FastMLFECli.lean  README.md  lake-manifest.json  lakefile.lean  lakefile.toml
.codex/: config.toml
FastMLFE2/: Basic.lean  CLI.lean  Compositing.lean  ConcreteImage.lean  ConcretePaper.lean  Derived.lean  GlobalSystem.lean  Legacy.lean  LevelOperator.lean  LinearAlgebra.lean  LocalCost.lean  LocalDerivation.lean  LocalModel.lean  LocalSolver.lean  MultigridSpec.lean  MultilevelSpec.lean  NativeFFI.lean  NormalEquation.lean  Notation.lean  PrecomputedSummary.lean  Runtime.lean  Spec.lean  SummaryForm.lean  Theory.lean
FastMLFE2/Approximation/: BlurFusion.lean
FastMLFE2/Assumptions/: Bundles.lean  Grid.lean
FastMLFE2/Canonical/: Builder.lean  ClampPlacement.lean  ClampedMultilevelRun.lean  Grid.lean  GridContext.lean  InteriorKernel.lean  LocalCommitments.lean  MultilevelPyramid.lean  MultilevelRun.lean  MultilevelSchedule.lean  RelaxedMultilevelRun.lean
FastMLFE2/Compositing/: OneChannel.lean
FastMLFE2/Core/: AnchoredClosedForm.lean  AnchoredLocalEquation.lean  ClosedForm.lean  JacobiIteration.lean  LocalEquation.lean  LocalSemantics.lean
FastMLFE2/Evaluation/: AdversarialFamilies.lean  ContinuousGrad.lean  DiscreteGrad.lean  DiscreteGradFamilies.lean  ForegroundMetrics.lean  StepEdgeFamilies.lean
FastMLFE2/FixedPrecision/: Coefficients.lean  Cost.lean  Format.lean  Jacobi.lean  LocalSolver.lean  Multilevel.lean
FastMLFE2/Level/: Jacobi.lean  Locality.lean
FastMLFE2/Runtime/: CliArgs.lean  Config.lean  Solver.lean
FastMLFE2/Theorems/: BinaryAlpha.lean  BinaryAlphaCost.lean  BleedThrough.lean  BlurFusionFixedPoint.lean  BlurFusionGap.lean  CanonicalBuilder.lean  ChannelReuse.lean  ClampLocal.lean  ClampPlacement.lean  ClampPlacementCounterexample.lean  ClosedForm.lean  ClosedFormBox.lean  ClosedFormBoxInput.lean  ClosedFormMeanResidual.lean  CompositingError.lean  Conditioning.lean  ContractionBounds.lean  CostToNormalEquation.lean  DiscreteGrad.lean  FixedPrecisionCost.lean  FixedPrecisionJacobi.lean  FixedPrecisionLocal.lean  FixedPrecisionMultilevel.lean  FixedPrecisionWraparound.lean  ForegroundMetrics.lean  Grid.lean  GridAssumptions.lean  GridLocal.lean  InteriorKernel.lean  Invertibility.lean  IterationInvariance.lean  Jacobi.lean  JacobiContraction.lean  Locality.lean  MeanResidualBounds.lean  NearBinary.lean  NearBinaryCounterexample.lean  NormalizedWeights.lean  PropagationRadius.lean  QuantizationBounds.lean  (+2 more)
FastMLFE2/Theorems/Approximation/: BleedThrough.lean  BlurFusionFixedPoint.lean  BlurFusionGap.lean  ClosedFormMeanResidual.lean  (+4 more)
docs/: README.md  THEOREMS.md  architecture.md  paper-summary.md  refactoring-plan.md
docs/superpowers/: README.md
evaluation/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
evaluation/cpp/: aos_workspace.hpp  bindings.hpp  common.hpp  cpu_impl.cpp  planar_views.hpp  resize_ops.hpp  soa_workspace.hpp  solver_float.hpp  solver_fx_u8.hpp  solver_u8.hpp
evaluation/scripts/: benchmark_backends.py
evaluation/src/fastmlfe2_eval/: __init__.py  metrics.py  patterns.py
evaluation/src/fastmlfe2_eval/estimator/: __init__.py  _cpu.py  _cpu_fx_u8.py  _cpu_u8.py  _gpu.py  _types.py
evaluation/tests/: test_benchmark_backends.py  test_estimator_cpu.py  test_estimator_gpu.py  test_metrics.py  test_patterns.py  test_types.py
native/: README.md  fastmlfe2_ffi.cpp  fastmlfe2_ffi.h  lean_fastmlfe2_ffi.cpp  runner.cpp  smoke.cpp
(+120 files in other folders)
