[project]
name = "fastmlfe2-eval"
version = "0.1.0"
description = "Evaluation harness for Fast-ML-FE2 proof implementations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "nusu-github", email = "29514220+nusu-github@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2",
    "scipy>=1.15",
    "pillow>=11",
    "numba>=0.64.0",
    "cupy-cuda12x>=14.0.1",
    "pymatting>=1.1.15",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
