[project]
name = "fastmlfe2-eval"
version = "0.1.0"
description = "Evaluation harness for Fast-ML-FE2 proof implementations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "nusu-github", email = "29514220+nusu-github@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2",
    "scipy>=1.15",
    "pillow>=11",
    "cupy-cuda12x>=14.0.1",
    "pymatting>=1.1.15",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.11", "nanobind", "ty"]

[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
